# aslam_incremental_calibration

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mainpage.dox  stack.xml
aslam_tsvd_solver/: CMakeLists.txt  package.xml
aslam_tsvd_solver/include/aslam-tsvd-solver/: aslam-tsvd-solver.h
aslam_tsvd_solver/src/: aslam-tsvd-solver.cc
incremental_calibration/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
incremental_calibration/src/2dlrf/: ErrorTermMotion.cpp  ErrorTermObservation.cpp  simulate-batch.cpp  simulate-it-new.cpp  simulate-it.cpp  utils.cpp
incremental_calibration/src/algorithms/: linalg.cpp  marginalize.cpp
incremental_calibration/src/base/: Serializable.cpp  Thread.cpp  Threads.cpp  Timestamp.cpp
incremental_calibration/src/car/: AckermanOdometry.cpp  DifferentialOdometry.cpp  ErrorTermOdometry.cpp  Odometry.cpp  applanix-optimize.cpp  calibrate-batch-morsel.cpp
incremental_calibration/src/core/: IncrementalEstimator.cpp  IncrementalOptimizationProblem.cpp  LinearSolver.cpp  LinearSolverOptions.cpp  OptimizationProblem.cpp
incremental_calibration/src/exceptions/: Exception.cpp  InvalidOperationException.cpp  NullPointerException.cpp  SystemException.cpp
incremental_calibration/src/functions/: DigammaFunction.cpp  IncompleteGammaPFunction.cpp  IncompleteGammaQFunction.cpp  LogFactorialFunction.cpp  LogGammaFunction.cpp
incremental_calibration/src/statistics/: ChiSquareDistribution.cpp  EstimatorMLNormal1v.cpp  NormalDistribution1v.cpp
incremental_calibration/src/vision/: VisionDataAssociation.cpp
incremental_calibration/test/: AlgorithmsTest.cpp  ErrorTermMotionTest.cpp  ErrorTermObservationTest.cpp  ErrorTermOdometryTest.cpp  ErrorTermPoseTest.cpp  IncrementalOptimizationProblemTest.cpp  LinearSolverTest.cpp  MatrixOperations.cpp  OdometryTest.cpp  OptimizationProblemTest.cpp  VectorDesignVariableTest.cpp  test_main.cpp
incremental_calibration_examples/incremental_calibration_examples_2dlrf/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
incremental_calibration_examples/incremental_calibration_examples_2dlrf/conf/: config.xml
incremental_calibration_examples/incremental_calibration_examples_2dlrf/test/: ErrorTermMotionTest.cpp  ErrorTermObservationTest.cpp
incremental_calibration_examples/incremental_calibration_examples_camera/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
incremental_calibration_examples/incremental_calibration_examples_camera/calib/: GX002537-omni-2013-04-04-11-15-47-camodocal1.xml  GX002537-omni-2013-04-04-11-15-47-camodocal2.xml  GX002537-omni-2013-11-28-17-33-33-camodocal1.xml  GX002537-omni-2013-11-28-17-33-33-camodocal2.xml  GX002537-omni-2013-11-28-17-33-33-full-1e-5.xml  GX002537-omni-2013-11-28-17-33-33-full-columnscaling-1e-10.xml  GX002537-omni-2013-11-28-17-33-33-full-columnscaling-1e-11.xml  GX002537-omni-2013-11-28-17-33-33-full-columnscaling-1e-4.xml  GX002537-omni-2013-11-28-17-33-33-full-columnscaling-1e-5.xml  GX002537-omni-2013-11-28-17-33-33-full-columnscaling-1e-7.xml  GX002537-omni-2013-11-28-17-33-33-full-columnscaling-1e-8.xml  GX002537-omni-2013-11-29-15-56-09-camodocal1.xml  GX002537-omni-2013-11-29-15-56-09-camodocal2.xml  GX002537-omni-2013-11-29-15-56-09-full-1e-5.xml  GX002537-omni-2013-11-29-15-56-09-full-columnscaling-1e-10.xml  GX002537-omni-2013-11-29-15-56-09-full-columnscaling-1e-16.xml  GX002537-omni-2013-11-29-15-56-09-full-columnscaling-1e-9.xml  GX002537-omni-2013-11-29-16-02-42-camodocal1.xml  GX002537-omni-2013-11-29-16-02-42-camodocal2.xml  GX002537-omni-2013-11-29-16-02-43-full-1e-5.xml  GX002537-omni-2013-11-29-16-06-22-camodocal1.xml  GX002537-omni-2013-11-29-16-06-22-camodocal2.xml  GX002537-omni-2013-11-29-16-06-22-full-1e-5.xml  GX002537-omni-2013-11-29-16-12-16-camodocal1.xml  GX002537-omni-2013-11-29-16-12-16-camodocal2.xml  GX002537-omni-2013-11-29-16-14-14-camodocal1.xml  GX002537-omni-2013-11-29-16-14-14-camodocal2.xml  GX002537-omni-2013-11-29-16-15-38-camodocal1.xml  GX002537-omni-2013-11-29-16-15-38-camodocal2.xml  GX002537-omni-2013-11-29-16-16-54-camodocal1.xml  GX002537-omni-2013-11-29-16-16-54-camodocal2.xml  GX002537-omni-2013-11-29-16-18-31-camodocal1.xml  GX002537-omni-2013-11-29-16-18-31-camodocal2.xml  GX002537-omni-2013-11-29-16-19-57-camodocal1.xml  GX002537-omni-2013-11-29-16-19-57-camodocal2.xml  GX002537-omni-2013-11-29-16-21-25-camodocal1.xml  GX002537-omni-2013-11-29-16-21-25-camodocal2.xml  GX002537-omni-2013-11-29-16-21-26-full-1e-5.xml  GX002537-pinhole-2013-04-04-11-15-47-camodocal1.xml  GX002537-pinhole-2013-04-04-11-15-47-camodocal2.xml  (+42 more)
incremental_calibration_examples/incremental_calibration_examples_camera/conf/: config.xml
incremental_calibration_examples/incremental_calibration_examples_car/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
incremental_calibration_examples/incremental_calibration_examples_car/conf/: config.xml
incremental_calibration_examples/incremental_calibration_examples_car/test/: CarCalibratorTest.cpp  CovarianceEstimatorTest.cpp  ErrorTermOdometryTest.cpp  ErrorTermPoseTest.cpp  ErrorTermVehicleModelTest.cpp  OdometryTest.cpp  test_main.cpp
incremental_calibration_examples/incremental_calibration_examples_egomotion_sensors/: CMakeLists.txt  package.xml
incremental_calibration_examples/incremental_calibration_examples_egomotion_sensors/conf/: simulation.xml
incremental_calibration_examples/incremental_calibration_examples_egomotion_sensors/test/: test_main.cpp
incremental_calibration_examples/incremental_calibration_examples_time_delay/: CMakeLists.txt  package.xml
incremental_calibration_examples/incremental_calibration_examples_time_delay/conf/: simulation.xml
incremental_calibration_examples/incremental_calibration_examples_time_delay/test/: test_main.cpp
truncated_svd_solver/: CMakeLists.txt  package.xml
truncated_svd_solver/include/truncated-svd-solver/: cholmod-helpers.h  (+4 more)
truncated_svd_solver/src/: linear-algebra-helpers.cc  marginalization.cc  tsvd-solver-options.cc  tsvd-solver.cc
truncated_svd_solver/test/: test-tsvd-solver.cc
(+369 files in other folders)
