<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>incremental_calibration</name>
  <version>0.0.1</version>
  <description>
    A C++-based library for calibrating robot sensors.
  </description>
  <maintainer email="jerome.maye@mavt.ethz.ch">Jerome Maye</maintainer>
  <license>LGPLv3</license>
  <url type="website">https://github.com/ethz-asl/aslam_incremental_calibration</url>
  <author email="jerome.maye@mavt.ethz.ch">Jerome Maye</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>aslam_backend</depend>
  <depend>aslam_tsvd_solver</depend>
  <depend>TBB</depend>
</package>
